2000-11-21  Frank Ch. Eigler  <fche@redhat.com>

	* Makefile.in: Regenerated.

2000-07-19  Frank Ch. Eigler  <fche@redhat.com>

	* Makefile.in: Regenerated.

2000-05-26  Frank Ch. Eigler  <fche@redhat.com>

	* components.h: Import more std:: identifiers.

2000-02-22  matthew green  <mrg@redhat.com>

	* ds1x42.cxx: string()ify the 2nd argument to add_attribute_ro_value().

2000-03-15  matthew green  <mrg@redhat.com>

	* components.h: Add several `throw()' specifiers to functions whose
	virtual declaration included the throw. New GCC checks this more
	completely.
	* ds1x42.cxx: Likewise.

2000-02-14  Ben Elliston  <bje@redhat.com>

	* components.h (ds1642::memory): Remove.
	(ds1642::membus): New member.
	(ds1642::memSize): Likewise.
	* ds1x42.cxx (ds1642::ds1642_bus::write_data): Use a bus accessor
	to perform NVRAM reads/writes with an external memory.
	(ds1642::ds1642_bus::read_data): Likewise.
	(ds1642 ctor): Initialise membus. Add a "memory-bus" accessor.
	(ds1642::write_7f8): Again, use the accessor.
	(operator <<): Don't save memory state.
	(operator >>): And don't restore it.
	* hw-rtc-ds1x42.txt: Update; document "memory-bus" accessor.

2000-02-10  Ben Elliston  <bje@redhat.com>

	* Makefile.am (librtc_la_SOURCES): Remove mktime.c.
	* Makefile.in: Regenerate.
	* mktime.c: Remove.
	* mktime.h: Likewise.
	* components.h (ds1642::refresh): New method.
	(ds1642::valid): Likewise.
	* ds1x42.cxx: Overhaul to better guard against invalid data.
	(bcd_to_bin): Return an unsigned type.
	(ds1642::refresh): Define.
	(ds1642::valid): Likewise.

2000-02-08  Frank Ch. Eigler  <fche@redhat.com>

	* components.cxx (rtcDelete): Guard against dynamic_cast after delete.

2000-01-17  Frank Ch. Eigler  <fche@cygnus.com>

	* Makefile.in: Regenerated.

2000-01-12  Frank Ch. Eigler  <fche@cygnus.com>

	* Makefile.in: Regenerated.

2000-01-07  Frank Ch. Eigler  <fche@cygnus.com>

	* hw-rtc-ds1x42.txt: Adjusted attribute reference section for template.