@@ -1,6 +1,6 @@
 // sidrtc.cxx - A simple real-time clock component.  -*- C++ -*-
 
-// Copyright (C) 1999, 2000 Red Hat.
+// Copyright (C) 1999-2001 Red Hat.
 // This file is part of SID and is licensed under the GPL.
 // See the file COPYING.SID for conditions for redistribution.
 
@@ -8,10 +8,52 @@
 #include "components.h"
 
 #include <sys/time.h>
+#include <time.h>
 
 sidrtc::sidrtc ()
 {
   add_bus ("registers", & this->rtcbus);
+
+  add_attribute_ro_value ("tk xclock clone", string("hw-visual-clock"), "gui");
+
+  add_attribute_virtual("hour", this,
+			&sidrtc::get_hours_attribute,
+			&sidrtc::set_no_attribute,
+			"register");
+  add_attribute_virtual("minute", this,
+			&sidrtc::get_minutes_attribute,
+			&sidrtc::set_no_attribute,
+			"register");
+  add_attribute_virtual("second", this,
+			&sidrtc::get_seconds_attribute,
+			&sidrtc::set_no_attribute,
+			"register");
+}
+
+
+// A couple of functions, just for use by tksm/hw-visual-clock
+string
+sidrtc::get_hours_attribute ()
+{
+  time_t now = time (0);
+  struct tm *t = gmtime (& now);
+  return t ? make_attribute (t->tm_hour) : "12";  // just like on a VCR :-)
+}
+
+string
+sidrtc::get_minutes_attribute ()
+{
+  time_t now = time (0);
+  struct tm *t = gmtime (& now);
+  return t ? make_attribute (t->tm_min) : "0";
+}
+
+string
+sidrtc::get_seconds_attribute ()
+{
+  time_t now = time (0);
+  struct tm *t = gmtime (& now);
+  return t ? make_attribute (t->tm_sec) : "0";
 }
 
 
