@@ -1,3 +1,13 @@
+2001-04-04  Frank Ch. Eigler  <fche@redhat.com>
+
+	* sidrtc.cxx (get_{hours,minutes,seconds}_attribute): New getter fns
+	for appropriate new attributes.
+	(set_no_attribute): New dummy setter fn for same.
+	(sidrtc ctor): Expose new attributes, component gui xref.
+	* components.h: Corresponding changes.
+	* hw-rtc-sid.txt: Document gui-compatibility.
+	* hw-rtc-ds1x42.txt: Similar tweak.
+
 2000-11-21  Frank Ch. Eigler  <fche@redhat.com>
 
 	* Makefile.in: Regenerated.
